--- a/style/style.css
+++ b/style/style.css
@@ -19,25 +19,67 @@ body {
 }
 
 #topnav {
-	width: 765px;
+	width: 70%;
 	color: #fff;
-/*	text-align: center;*/
 	margin: 0 auto;
 }
 
 #secondlevel {
 	background-color: #fff;
-	width: 50%;
+	width: 70%;
 	color: #414142;
     margin: 0 auto;
+}
+
+#secondlevel img{
+	display: block;
 }
 
 #thirdlevel {
-	width: 50%;
+	width: 70%;
 	color: #414142;
     margin: 0 auto;
 }
 
+#forthlevelcontainer {
+	width: 70%;
+	margin: 0 auto;
+	clear: none;
+}
+
+#forthlevelleft {
+	float: left;
+	width: 65%;
+	padding: 1em;
+}
+
+.iconbox {
+	float: left;
+	width: 16%;
+	padding: 1.5em 0 0 0;
+}
+
+.textpain {
+	width: 80%;
+	text-align:left;
+	overflow: hidden;
+}
+
+/*#forthlevelright {
+	float: right;
+}*/
+
+footer {
+	background-color: #414142;
+	width: 100%;
+	height: 10em;
+	color: #fff;
+}
+
+#bottomcontainer{
+	width: 70%;
+	margin: 0 auto;
+}
 .background {
 	width: 100%;
 }
@@ -58,8 +100,7 @@ body {
 	list-style: none;
 	list-style-type: none;
 	float: right;
-	width: 12%;
-/*	text-decoration: none;*/
+/*	width: 12%;*/
 }
 
 .navicons li{
@@ -79,14 +120,10 @@ body {
     color: #fff;
 }
 
-/*ul a {
-	text-decoration: none;
-}
-*/
 
 /*Dropdown navigations*/
 .dropbtn {
-    display: flex;
+/*    display: flex;*/
     background-color: #f49b42;
     color: white;
     padding: 16px;
