--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
+	font-size: 10pt;
 }
 
 #container {
@@ -43,14 +44,20 @@ body {
 
 #forthlevelcontainer {
 	width: 70%;
+	height: 35em;
 	margin: 0 auto;
-	clear: none;
 }
 
 #forthlevelleft {
+	background-color: #fff;
 	float: left;
-	width: 65%;
-	padding: 1em;
+	width: 66%;
+	padding: 0 0 1em 1.5em;
+}
+
+#forthlevelright {
+	float: right;
+	width: 32%;
 }
 
 .iconbox {
@@ -65,20 +72,17 @@ body {
 	overflow: hidden;
 }
 
-/*#forthlevelright {
-	float: right;
-}*/
-
 footer {
 	background-color: #414142;
 	width: 100%;
-	height: 10em;
+	height: 20em;
 	color: #fff;
 }
 
 #bottomcontainer{
 	width: 70%;
 	margin: 0 auto;
+/*	overflow: hidden;*/
 }
 .background {
 	width: 100%;
@@ -175,3 +179,91 @@ footer {
 @keyframes beat {
 	to { transform: scale(1.2);
 }	
+
+
+/*Contact Form*/
+
+#bottomleft {
+  float: left;
+  width: 66%;
+  padding: 0 0 1em 1.5em;
+}
+
+#bottomright {
+  float: right;
+  width: 33%;
+}
+
+
+main {
+	margin: 0 auto;
+	max-width: 24rem;
+}
+
+main > header h1 {
+  line-height: 1.25;
+  margin: 0 0 -.25rem;
+}
+
+main > header p {
+  margin: 0 0 1rem;
+}
+
+label {
+	display: block;
+  margin-bottom: .25rem; 
+}
+
+label span {
+	display: inline-block;
+  	font-size: .9rem;
+  width: 33%;
+}
+
+label input {
+  border-radius: .25rem;
+  border: .1rem solid lightgray;
+  outline: none;
+  padding: .5rem;
+  width: 64%;
+}
+
+label input.error {
+  background-color: tomato;
+}
+
+label input.error:focus {
+  border-color: brown;
+}
+
+label label {
+  color: tomato;
+  font-size: smaller;
+  margin-left: 37%;
+}
+
+button {
+  border-radius: .25rem;
+  margin-left: 34%;
+  padding: .35rem 1rem;
+  font-size: 1.1rem;
+}
+
+
+
+
+label input.error::-webkit-input-placeholder {
+  color: whitesmoke !important;
+}
+ 
+label input.error:-moz-placeholder { /* Firefox 18- */
+  color: whitesmoke !important;  
+}
+ 
+label input.error::-moz-placeholder {  /* Firefox 19+ */
+  color: whitesmoke !important;  
+}
+ 
+label input.error:-ms-input-placeholder {  
+  color: whitesmoke !important;  
+}
