--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,10 @@ body {
 	padding: 0 0 1em 1.5em;
 }
 
+#forthlevelleft h2{
+	color: #ff6600;
+}
+
 #forthlevelright {
 	float: right;
 	width: 32%;
@@ -64,10 +68,11 @@ body {
 	float: left;
 	width: 16%;
 	padding: 1.5em 0 0 0;
+	color: #ff6600;
 }
 
 .textpain {
-	width: 80%;
+	width: 82%;
 	text-align:left;
 	overflow: hidden;
 }
@@ -113,11 +118,11 @@ footer {
 }
 
 .navicons a:link {
-    color: #f49b42;
+    color: #ff6600;
 }
 
 .navicons a:visited {
-    color: #f49b42;
+    color: #ff6600;
 }
 
 .navicons a:hover {
@@ -128,7 +133,7 @@ footer {
 /*Dropdown navigations*/
 .dropbtn {
 /*    display: flex;*/
-    background-color: #f49b42;
+    background-color: #ff6600;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -144,21 +149,21 @@ footer {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f49b42;
+    background-color: #ff6600;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
+    color: #fff;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-	background-color: #f1f1f1
+	background-color: #414142
 }
 
 .dropdown:hover .dropdown-content {
