--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 #forthlevelleft h2{
-	color: #ff6600;
+	color: #414142;
 }
 
 #forthlevelright {
@@ -84,7 +84,7 @@ body {
 footer {
 	background-color: #414142;
 	width: 100%;
-	height: 20em;
+	height: 35em;
 	color: #fff;
 }
 
@@ -137,13 +137,11 @@ footer {
   float: left;
   width: 66%;
   padding: 0 0 1em 1.5em;
-  background-color: purple;
 }
 
 #bottomright {
   float: right;
   width: 33%;
-  background-color: yellow;
 }
 
 
@@ -163,14 +161,24 @@ main > header p {
 
 label {
 	display: block;
-  margin-bottom: .25rem; 
+  	margin-bottom: .25rem; 
 }
 
 label span {
 	display: inline-block;
   	font-size: .9rem;
-  width: 33%;
+  	width: 33%;
 }
+
+label input {
+  border-radius: .25rem;
+  border: .1rem solid lightgray;
+  outline: none;
+  padding: .5rem;
+  width: 64%;
+}
+
+.resizedTextbox {width: 64%; height: 100px}
 
 label input {
   border-radius: .25rem;
@@ -199,10 +207,9 @@ button {
   margin-left: 34%;
   padding: .35rem 1rem;
   font-size: 1.1rem;
+  color: #fff;
+  background-color: #ff6600; 
 }
-
-
-
 
 label input.error::-webkit-input-placeholder {
   color: whitesmoke !important;
