--- a/style/style.css
+++ b/style/style.css
@@ -91,8 +91,6 @@ footer {
 #bottomcontainer{
 	width: 70%;
 	margin: 0 auto;
-	background-color: yellow;
-/*	overflow: hidden;*/
 }
 
 .logo {
@@ -131,7 +129,6 @@ footer {
     color: #fff;
 }
 
-/*Contact Form*/
 
 #bottomleft {
   float: left;
@@ -139,11 +136,14 @@ footer {
   padding: 0 0 1em 1.5em;
 }
 
+/*Location Map*/
+
 #bottomright {
   float: right;
   width: 33%;
 }
 
+/*Contact Form*/
 
 main {
 	margin: 0 auto;
